tests/snapshots/class_render__associations_snapshot.snap
---
source: tests/class_render.rs
assertion_line: 87
expression: svg
---
<svg height="222" viewBox="0 0 560 222" width="560" xmlns="http://www.w3.org/2000/svg">
<defs>
<marker id="arr-filled" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arr-hollow" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#ffffff" points="0 0, 10 5, 0 10" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="arr-diamond-f" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#181818" points="0 5, 5 0, 10 5, 5 10"/>
</marker>
<marker id="arr-diamond-h" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#ffffff" points="0 5, 5 0, 10 5, 5 10" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="arrowhead" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arrowhead-open" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<path d="M0,0 L10,5 L0,10" fill="none" stroke="#181818" stroke-width="1.5"/>
</marker>
</defs>
<style>
text{font-family:"Liberation Sans",Helvetica,Arial,sans-serif;font-size:13px;fill:#181818}.participant-box{fill:#dae8fc;stroke:#6c8ebf;stroke-width:1.5}.lifeline{stroke:#6c8ebf;stroke-width:1;stroke-dasharray:6,4}.activation{fill:#cce0ff;stroke:#6c8ebf;stroke-width:1}.arrow{stroke:#181818;stroke-width:1.5;fill:none}.arrow-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.note-box{fill:#ffffc0;stroke:#bbbb00;stroke-width:1}.divider-line{stroke:#888888;stroke-width:1.5;stroke-dasharray:8,3}.divider-label{font-weight:bold}.title{font-size:15px;font-weight:bold}.class-line{stroke:#181818;stroke-width:1.5;fill:none}.class-line-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.bg{fill:#ffffff}@media (prefers-color-scheme:dark){text{fill:#e8e8e8}.bg{fill:#1e1e1e}.arrow,.class-line{stroke:#e8e8e8}.arrow-dashed,.class-line-dashed{stroke:#e8e8e8}.divider-line{stroke:#aaaaaa}}
</style>
<rect class="bg" fill="#ffffff" height="100%" width="100%"/>
<g>
<path class="class-line" d="M390,71 L170,71" marker-end="none"/>
<text font-size="11" text-anchor="middle" x="280" y="67">
places
</text>
<text font-size="11" x="396" y="67">
1
</text>
<text font-size="11" x="176" y="67">
*
</text>
</g>
<g>
<path class="class-line" d="M210,71 L170,71" marker-end="url(#arr-diamond-f)"/>
<text font-size="11" text-anchor="middle" x="190" y="67">
contains
</text>
<text font-size="11" x="216" y="67">
1
</text>
<text font-size="11" x="176" y="67">
*
</text>
</g>
<g>
<path class="class-line" d="M170,71 L390,71" marker-end="url(#arrowhead)"/>
<text font-size="11" text-anchor="middle" x="280" y="67">
owner
</text>
</g>
<g>
<rect fill="none" height="82" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="30" y="30"/>
<text font-weight="bold" text-anchor="middle" x="100" y="52">
Order
</text>
<line stroke="#6c8ebf" stroke-width="1" x1="30" x2="170" y1="66" y2="66"/>
<text font-style="normal" text-decoration="none" x="38" y="80">
+id: int
</text>
<text font-style="normal" text-decoration="none" x="38" y="100">
+total(): Money
</text>
</g>
<g>
<rect fill="none" height="82" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="210" y="30"/>
<text font-weight="bold" text-anchor="middle" x="280" y="52">
LineItem
</text>
<line stroke="#6c8ebf" stroke-width="1" x1="210" x2="350" y1="66" y2="66"/>
<text font-style="normal" text-decoration="none" x="218" y="80">
+qty: int
</text>
<text font-style="normal" text-decoration="none" x="218" y="100">
+price: Money
</text>
</g>
<g>
<rect fill="none" height="82" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="390" y="30"/>
<text font-weight="bold" text-anchor="middle" x="460" y="52">
Customer
</text>
<line stroke="#6c8ebf" stroke-width="1" x1="390" x2="530" y1="66" y2="66"/>
<text font-style="normal" text-decoration="none" x="398" y="80">
+name: String
</text>
</g>
</svg>
