tests/snapshots/class_render__class_basic_snapshot.snap
---
source: tests/class_render.rs
assertion_line: 34
expression: svg
---
<svg height="504" viewBox="0 0 594 504" width="594" xmlns="http://www.w3.org/2000/svg">
<defs>
<marker id="arr-filled" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arr-hollow" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#ffffff" points="0 0, 10 5, 0 10" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="arr-diamond-f" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#181818" points="0 5, 5 0, 10 5, 5 10"/>
</marker>
<marker id="arr-diamond-h" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#ffffff" points="0 5, 5 0, 10 5, 5 10" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="arrowhead" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arrowhead-open" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<path d="M0,0 L10,5 L0,10" fill="none" stroke="#181818" stroke-width="1.5"/>
</marker>
</defs>
<style>
text{font-family:"Liberation Sans",Helvetica,Arial,sans-serif;font-size:13px;fill:#181818}.participant-box{fill:#dae8fc;stroke:#6c8ebf;stroke-width:1.5}.lifeline{stroke:#6c8ebf;stroke-width:1;stroke-dasharray:6,4}.activation{fill:#cce0ff;stroke:#6c8ebf;stroke-width:1}.arrow{stroke:#181818;stroke-width:1.5;fill:none}.arrow-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.note-box{fill:#ffffc0;stroke:#bbbb00;stroke-width:1}.divider-line{stroke:#888888;stroke-width:1.5;stroke-dasharray:8,3}.divider-label{font-weight:bold}.title{font-size:15px;font-weight:bold}.class-line{stroke:#181818;stroke-width:1.5;fill:none}.class-line-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.bg{fill:#ffffff}@media (prefers-color-scheme:dark){text{fill:#e8e8e8}.bg{fill:#1e1e1e}.arrow,.class-line{stroke:#e8e8e8}.arrow-dashed,.class-line-dashed{stroke:#e8e8e8}.divider-line{stroke:#aaaaaa}}
</style>
<rect class="bg" fill="#ffffff" height="100%" width="100%"/>
<text class="title" text-anchor="middle" x="297" y="30">
Basic Class Diagram
</text>
<g>
<path class="class-line" d="M280,172 L280,222 L100,222 L100,272" marker-end="url(#arr-hollow)"/>
<text font-size="11" text-anchor="middle" x="190" y="218">
extends
</text>
</g>
<g>
<path class="class-line" d="M100,172 L100,272" marker-end="url(#arr-hollow)"/>
<text font-size="11" text-anchor="middle" x="100" y="218">
extends
</text>
</g>
<g>
<path class="class-line-dashed" d="M280,172 L280,272" marker-end="url(#arr-hollow)"/>
<text font-size="11" text-anchor="middle" x="280" y="218">
implements
</text>
</g>
<g>
<path class="class-line-dashed" d="M477,192 L477,232 L280,232 L280,272" marker-end="url(#arr-hollow)"/>
<text font-size="11" text-anchor="middle" x="378.5" y="228">
implements
</text>
</g>
<g>
<rect fill="none" height="122" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="30" y="272"/>
<text font-weight="bold" text-anchor="middle" x="100" y="294">
Animal
</text>
<line stroke="#6c8ebf" stroke-width="1" x1="30" x2="170" y1="308" y2="308"/>
<text font-style="normal" text-decoration="none" x="38" y="322">
+name: String
</text>
<text font-style="normal" text-decoration="none" x="38" y="342">
+age: int
</text>
<text font-style="normal" text-decoration="none" x="38" y="362">
+speak()
</text>
<text font-style="normal" text-decoration="none" x="38" y="382">
+move()
</text>
</g>
<g>
<rect fill="none" height="82" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="210" y="90"/>
<text font-weight="bold" text-anchor="middle" x="280" y="112">
Dog
</text>
<line stroke="#6c8ebf" stroke-width="1" x1="210" x2="350" y1="126" y2="126"/>
<text font-style="normal" text-decoration="none" x="218" y="140">
+breed: String
</text>
<text font-style="normal" text-decoration="none" x="218" y="160">
+fetch()
</text>
</g>
<g>
<rect fill="none" height="82" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="30" y="90"/>
<text font-weight="bold" text-anchor="middle" x="100" y="112">
Cat
</text>
<line stroke="#6c8ebf" stroke-width="1" x1="30" x2="170" y1="126" y2="126"/>
<text font-style="normal" text-decoration="none" x="38" y="140">
+indoor: bool
</text>
<text font-style="normal" text-decoration="none" x="38" y="160">
+purr()
</text>
</g>
<g>
<rect fill="none" height="82" rx="3" stroke="#6666bb" stroke-width="1.5" width="140" x="210" y="272"/>
<text fill="#555" font-size="10" text-anchor="middle" x="280" y="284">
«interface»
</text>
<text font-weight="bold" text-anchor="middle" x="280" y="298">
Drawable
</text>
<line stroke="#6666bb" stroke-width="1" x1="210" x2="350" y1="308" y2="308"/>
<text font-style="normal" text-decoration="none" x="218" y="322">
+draw()
</text>
<text font-style="normal" text-decoration="none" x="218" y="342">
+resize()
</text>
</g>
<g>
<rect fill="none" height="102" rx="3" stroke="#bb6666" stroke-width="1.5" width="174" x="390" y="90"/>
<text fill="#555" font-size="10" text-anchor="middle" x="477" y="102">
«abstract»
</text>
<text font-weight="italic" text-anchor="middle" x="477" y="116">
Shape
</text>
<line stroke="#bb6666" stroke-width="1" x1="390" x2="564" y1="126" y2="126"/>
<text font-style="normal" text-decoration="none" x="398" y="140">
#color: String
</text>
<text font-style="italic" text-decoration="none" x="398" y="160">
+area(): double
</text>
<text font-style="italic" text-decoration="none" x="398" y="180">
+perimeter(): double
</text>
</g>
</svg>
