tests/snapshots/class_render__class_relations_snapshot.snap
---
source: tests/class_render.rs
assertion_line: 40
expression: svg
---
<svg height="262" viewBox="0 0 740 262" width="740" xmlns="http://www.w3.org/2000/svg">
<defs>
<marker id="arr-filled" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arr-hollow" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#ffffff" points="0 0, 10 5, 0 10" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="arr-diamond-f" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#181818" points="0 5, 5 0, 10 5, 5 10"/>
</marker>
<marker id="arr-diamond-h" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#ffffff" points="0 5, 5 0, 10 5, 5 10" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="arrowhead" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arrowhead-open" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<path d="M0,0 L10,5 L0,10" fill="none" stroke="#181818" stroke-width="1.5"/>
</marker>
</defs>
<style>
text{font-family:"Liberation Sans",Helvetica,Arial,sans-serif;font-size:13px;fill:#181818}.participant-box{fill:#dae8fc;stroke:#6c8ebf;stroke-width:1.5}.lifeline{stroke:#6c8ebf;stroke-width:1;stroke-dasharray:6,4}.activation{fill:#cce0ff;stroke:#6c8ebf;stroke-width:1}.arrow{stroke:#181818;stroke-width:1.5;fill:none}.arrow-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.note-box{fill:#ffffc0;stroke:#bbbb00;stroke-width:1}.divider-line{stroke:#888888;stroke-width:1.5;stroke-dasharray:8,3}.divider-label{font-weight:bold}.title{font-size:15px;font-weight:bold}.class-line{stroke:#181818;stroke-width:1.5;fill:none}.class-line-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.bg{fill:#ffffff}@media (prefers-color-scheme:dark){text{fill:#e8e8e8}.bg{fill:#1e1e1e}.arrow,.class-line{stroke:#e8e8e8}.arrow-dashed,.class-line-dashed{stroke:#e8e8e8}.divider-line{stroke:#aaaaaa}}
</style>
<rect class="bg" fill="#ffffff" height="100%" width="100%"/>
<g>
<line class="class-line" marker-end="url(#arr-diamond-f)" x1="210" x2="170" y1="71" y2="61"/>
<text font-size="11" text-anchor="middle" x="190" y="62">
contains
</text>
<text font-size="11" x="216" y="67">
1
</text>
<text font-size="11" x="176" y="57">
many
</text>
</g>
<g>
<line class="class-line" marker-end="url(#arr-diamond-h)" x1="390" x2="350" y1="91" y2="71"/>
<text font-size="11" text-anchor="middle" x="370" y="77">
employs
</text>
<text font-size="11" x="396" y="87">
1
</text>
<text font-size="11" x="356" y="67">
many
</text>
</g>
<g>
<line class="class-line" marker-end="none" x1="530" x2="570" y1="91" y2="81"/>
<text font-size="11" text-anchor="middle" x="550" y="82">
has
</text>
</g>
<g>
<rect fill="#dae8fc" height="62" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="30" y="30"/>
<rect fill="#c5d8f0" height="36" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="30" y="30"/>
<text font-weight="bold" text-anchor="middle" x="100" y="52">
Company
</text>
<line stroke="#6c8ebf" stroke-width="1" x1="30" x2="170" y1="66" y2="66"/>
<text font-style="normal" text-decoration="none" x="38" y="80">
+name: String
</text>
</g>
<g>
<rect fill="#dae8fc" height="82" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="210" y="30"/>
<rect fill="#c5d8f0" height="36" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="210" y="30"/>
<text font-weight="bold" text-anchor="middle" x="280" y="52">
Department
</text>
<line stroke="#6c8ebf" stroke-width="1" x1="210" x2="350" y1="66" y2="66"/>
<text font-style="normal" text-decoration="none" x="218" y="80">
+name: String
</text>
<text font-style="normal" text-decoration="none" x="218" y="100">
+budget: float
</text>
</g>
<g>
<rect fill="#dae8fc" height="122" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="390" y="30"/>
<rect fill="#c5d8f0" height="36" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="390" y="30"/>
<text font-weight="bold" text-anchor="middle" x="460" y="52">
Employee
</text>
<line stroke="#6c8ebf" stroke-width="1" x1="390" x2="530" y1="66" y2="66"/>
<text font-style="normal" text-decoration="none" x="398" y="80">
+id: int
</text>
<text font-style="normal" text-decoration="none" x="398" y="100">
+name: String
</text>
<text font-style="normal" text-decoration="none" x="398" y="120">
+salary: float
</text>
<text font-style="normal" text-decoration="none" x="398" y="140">
+work()
</text>
</g>
<g>
<rect fill="#f5fff5" height="102" rx="3" stroke="#66bb66" stroke-width="1.5" width="140" x="570" y="30"/>
<rect fill="#ded" height="36" rx="3" stroke="#66bb66" stroke-width="1.5" width="140" x="570" y="30"/>
<text fill="#555" font-size="10" text-anchor="middle" x="640" y="42">
«enum»
</text>
<text font-weight="bold" text-anchor="middle" x="640" y="56">
Role
</text>
<line stroke="#66bb66" stroke-width="1" x1="570" x2="710" y1="66" y2="66"/>
<text font-style="normal" text-decoration="none" x="578" y="80">
MANAGER
</text>
<text font-style="normal" text-decoration="none" x="578" y="100">
ENGINEER
</text>
<text font-style="normal" text-decoration="none" x="578" y="120">
DESIGNER
</text>
</g>
</svg>
