tests/snapshots/class_render__deployment_snapshot.snap
---
source: tests/class_render.rs
assertion_line: 142
expression: svg
---
<svg height="182" viewBox="0 0 1460 182" width="1460" xmlns="http://www.w3.org/2000/svg">
<defs>
<marker id="arr-filled" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arr-hollow" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#ffffff" points="0 0, 10 5, 0 10" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="arr-diamond-f" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#181818" points="0 5, 5 0, 10 5, 5 10"/>
</marker>
<marker id="arr-diamond-h" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#ffffff" points="0 5, 5 0, 10 5, 5 10" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="arrowhead" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arrowhead-open" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<path d="M0,0 L10,5 L0,10" fill="none" stroke="#181818" stroke-width="1.5"/>
</marker>
</defs>
<style>
text{font-family:"Liberation Sans",Helvetica,Arial,sans-serif;font-size:13px;fill:#181818}.participant-box{fill:#dae8fc;stroke:#6c8ebf;stroke-width:1.5}.lifeline{stroke:#6c8ebf;stroke-width:1;stroke-dasharray:6,4}.activation{fill:#cce0ff;stroke:#6c8ebf;stroke-width:1}.arrow{stroke:#181818;stroke-width:1.5;fill:none}.arrow-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.note-box{fill:#ffffc0;stroke:#bbbb00;stroke-width:1}.divider-line{stroke:#888888;stroke-width:1.5;stroke-dasharray:8,3}.divider-label{font-weight:bold}.title{font-size:15px;font-weight:bold}.class-line{stroke:#181818;stroke-width:1.5;fill:none}.class-line-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.bg{fill:#ffffff}@media (prefers-color-scheme:dark){text{fill:#e8e8e8}.bg{fill:#1e1e1e}.arrow,.class-line{stroke:#e8e8e8}.arrow-dashed,.class-line-dashed{stroke:#e8e8e8}.divider-line{stroke:#aaaaaa}}
</style>
<rect class="bg" fill="#ffffff" height="100%" width="100%"/>
<g>
<line class="class-line" marker-end="url(#arrowhead)" x1="1070" x2="1110" y1="51" y2="51"/>
<text font-size="11" text-anchor="middle" x="1090" y="47">
deploy
</text>
</g>
<g>
<line class="class-line" marker-end="url(#arrowhead)" x1="1070" x2="1290" y1="51" y2="51"/>
<text font-size="11" text-anchor="middle" x="1180" y="47">
query
</text>
</g>
<g>
<line class="class-line" marker-end="url(#arrowhead)" x1="930" x2="890" y1="51" y2="51"/>
<text font-size="11" text-anchor="middle" x="910" y="47">
publish
</text>
</g>
<g>
<line class="class-line" marker-end="url(#arrowhead)" x1="1110" x2="710" y1="51" y2="51"/>
<text font-size="11" text-anchor="middle" x="910" y="47">
serve
</text>
</g>
<g>
<polygon fill="none" points="30,36 36,30 170,30 164,36" stroke="#888888" stroke-width="1.5"/>
<polygon fill="none" points="164,36 170,30 170,66 164,72" stroke="#888888" stroke-width="1.5"/>
<rect fill="none" height="36" stroke="#888888" stroke-width="1.5" width="134" x="30" y="36"/>
<text fill="#555" font-size="10" text-anchor="middle" x="100" y="42">
«node»
</text>
<text font-weight="bold" text-anchor="middle" x="100" y="56">
Web Server
</text>
</g>
<g>
<path d="M350.00,51.00 A22.12,22.12 0 0 1 329.50,65.85 A37.47,37.47 0 0 1 280.00,72.00 A37.47,37.47 0 0 1 230.50,65.85 A22.12,22.12 0 0 1 210.00,51.00 A22.12,22.12 0 0 1 230.50,36.15 A37.47,37.47 0 0 1 280.00,30.00 A37.47,37.47 0 0 1 329.50,36.15 A22.12,22.12 0 0 1 350.00,51.00 Z" fill="none" stroke="#8da0b0" stroke-width="1.5"/>
<text fill="#555" font-size="10" text-anchor="middle" x="280" y="42">
«cloud»
</text>
<text font-weight="bold" text-anchor="middle" x="280" y="56">
AWS
</text>
</g>
<g>
<line stroke="#a06ba0" stroke-width="1.5" x1="390" x2="390" y1="37.56" y2="64.44"/>
<line stroke="#a06ba0" stroke-width="1.5" x1="530" x2="530" y1="37.56" y2="64.44"/>
<path d="M390,64.44 A70,7.56 0 0 0 530,64.44" fill="none" stroke="#a06ba0" stroke-width="1.5"/>
<ellipse cx="460" cy="37.56" fill="none" rx="70" ry="7.56" stroke="#a06ba0" stroke-width="1.5"/>
<text fill="#555" font-size="10" text-anchor="middle" x="460" y="42">
«database»
</text>
<text font-weight="bold" text-anchor="middle" x="460" y="56">
UserDB
</text>
</g>
<g>
<path d="M570,30 L619,30 L629,40 L710,40 L710,72 L570,72 Z" fill="none" stroke="#c89b2e" stroke-width="1.5"/>
<line stroke="#c89b2e" stroke-width="1" x1="570" x2="629" y1="40" y2="40"/>
<text fill="#555" font-size="10" text-anchor="middle" x="640" y="42">
«folder»
</text>
<text font-weight="bold" text-anchor="middle" x="640" y="56">
Assets
</text>
</g>
<g>
<line stroke="#5a92c4" stroke-width="1.5" x1="760" x2="880" y1="30" y2="30"/>
<line stroke="#5a92c4" stroke-width="1.5" x1="760" x2="880" y1="72" y2="72"/>
<ellipse cx="760" cy="51" fill="none" rx="10" ry="21" stroke="#5a92c4" stroke-width="1.5"/>
<path d="M880,30 A10,21 0 0 1 880,72" fill="none" stroke="#5a92c4" stroke-width="1.5"/>
<text fill="#555" font-size="10" text-anchor="middle" x="820" y="42">
«queue»
</text>
<text font-weight="bold" text-anchor="middle" x="820" y="56">
Messages
</text>
</g>
<g>
<rect fill="none" height="42" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="930" y="30"/>
<text font-weight="bold" text-anchor="middle" x="1000" y="52">
web
</text>
</g>
<g>
<rect fill="none" height="42" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="1110" y="30"/>
<text font-weight="bold" text-anchor="middle" x="1180" y="52">
aws
</text>
</g>
<g>
<rect fill="none" height="42" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="1290" y="30"/>
<text font-weight="bold" text-anchor="middle" x="1360" y="52">
db
</text>
</g>
</svg>
