tests/snapshots/class_render__generics_and_notes_snapshot.snap
---
source: tests/class_render.rs
assertion_line: 58
expression: svg
---
<svg height="384" viewBox="0 0 593 384" width="593" xmlns="http://www.w3.org/2000/svg">
<defs>
<marker id="arr-filled" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arr-hollow" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#ffffff" points="0 0, 10 5, 0 10" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="arr-diamond-f" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#181818" points="0 5, 5 0, 10 5, 5 10"/>
</marker>
<marker id="arr-diamond-h" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#ffffff" points="0 5, 5 0, 10 5, 5 10" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="arrowhead" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arrowhead-open" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<path d="M0,0 L10,5 L0,10" fill="none" stroke="#181818" stroke-width="1.5"/>
</marker>
</defs>
<style>
text{font-family:"Liberation Sans",Helvetica,Arial,sans-serif;font-size:13px;fill:#181818}.participant-box{fill:#dae8fc;stroke:#6c8ebf;stroke-width:1.5}.lifeline{stroke:#6c8ebf;stroke-width:1;stroke-dasharray:6,4}.activation{fill:#cce0ff;stroke:#6c8ebf;stroke-width:1}.arrow{stroke:#181818;stroke-width:1.5;fill:none}.arrow-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.note-box{fill:#ffffc0;stroke:#bbbb00;stroke-width:1}.divider-line{stroke:#888888;stroke-width:1.5;stroke-dasharray:8,3}.divider-label{font-weight:bold}.title{font-size:15px;font-weight:bold}.class-line{stroke:#181818;stroke-width:1.5;fill:none}.class-line-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.bg{fill:#ffffff}@media (prefers-color-scheme:dark){text{fill:#e8e8e8}.bg{fill:#1e1e1e}.arrow,.class-line{stroke:#e8e8e8}.arrow-dashed,.class-line-dashed{stroke:#e8e8e8}.divider-line{stroke:#aaaaaa}}
</style>
<rect class="bg" fill="#ffffff" height="100%" width="100%"/>
<g>
<path class="class-line" d="M113.25,132 L113.25,172 L132,172 L132,212" marker-end="url(#arr-hollow)"/>
</g>
<g>
<rect fill="none" height="102" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="166.5" x="30" y="30"/>
<text fill="#555" font-size="10" text-anchor="middle" x="113.25" y="44">
«data»
</text>
<text font-weight="bold" text-anchor="middle" x="113.25" y="56">
Container&lt;T&gt;
</text>
<line stroke="#6c8ebf" stroke-width="1" x1="30" x2="196.5" y1="66" y2="66"/>
<text font-style="normal" text-decoration="none" x="38" y="80">
+items: List&lt;T&gt;
</text>
<text font-style="normal" text-decoration="none" x="38" y="100">
+add(item: T)
</text>
<text font-style="normal" text-decoration="none" x="38" y="120">
+get(index: int): T
</text>
</g>
<g>
<rect fill="none" height="62" rx="3" stroke="#6666bb" stroke-width="1.5" width="204" x="30" y="212"/>
<text fill="#555" font-size="10" text-anchor="middle" x="132" y="224">
«interface»
</text>
<text font-weight="bold" text-anchor="middle" x="132" y="238">
Iterable&lt;T&gt;
</text>
<line stroke="#6666bb" stroke-width="1" x1="30" x2="234" y1="248" y2="248"/>
<text font-style="normal" text-decoration="none" x="38" y="262">
+iterator(): Iterator&lt;T&gt;
</text>
</g>
<g>
<polygon class="note-box" points="216.5,67 553,67 563,77 563,95 216.5,95"/>
<polyline fill="none" points="553,67 553,77 563,77" stroke="#bbbb00" stroke-width="1"/>
<line stroke="#bbbb00" stroke-dasharray="3,2" stroke-width="1" x1="196.5" x2="216.5" y1="81" y2="81"/>
<text font-size="12" x="224.5" y="83">
Generic container\nholds elements of type T
</text>
</g>
</svg>
