tests/snapshots/class_render__inheritance_chain_snapshot.snap
---
source: tests/class_render.rs
assertion_line: 73
expression: svg
---
<svg height="404" viewBox="0 0 380 404" width="380" xmlns="http://www.w3.org/2000/svg">
<defs>
<marker id="arr-filled" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arr-hollow" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#ffffff" points="0 0, 10 5, 0 10" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="arr-diamond-f" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#181818" points="0 5, 5 0, 10 5, 5 10"/>
</marker>
<marker id="arr-diamond-h" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#ffffff" points="0 5, 5 0, 10 5, 5 10" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="arrowhead" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arrowhead-open" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<path d="M0,0 L10,5 L0,10" fill="none" stroke="#181818" stroke-width="1.5"/>
</marker>
</defs>
<style>
text{font-family:"Liberation Sans",Helvetica,Arial,sans-serif;font-size:13px;fill:#181818}.participant-box{fill:#dae8fc;stroke:#6c8ebf;stroke-width:1.5}.lifeline{stroke:#6c8ebf;stroke-width:1;stroke-dasharray:6,4}.activation{fill:#cce0ff;stroke:#6c8ebf;stroke-width:1}.arrow{stroke:#181818;stroke-width:1.5;fill:none}.arrow-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.note-box{fill:#ffffc0;stroke:#bbbb00;stroke-width:1}.divider-line{stroke:#888888;stroke-width:1.5;stroke-dasharray:8,3}.divider-label{font-weight:bold}.title{font-size:15px;font-weight:bold}.class-line{stroke:#181818;stroke-width:1.5;fill:none}.class-line-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.bg{fill:#ffffff}
</style>
<rect fill="#ffffff" height="100%" width="100%"/>
<g>
<line class="class-line" marker-end="url(#arr-hollow)" x1="100" x2="100" y1="132" y2="212"/>
</g>
<g>
<line class="class-line" marker-end="url(#arr-hollow)" x1="280" x2="100" y1="132" y2="212"/>
</g>
<g>
<line class="class-line-dashed" marker-end="url(#arr-hollow)" x1="100" x2="280" y1="132" y2="212"/>
</g>
<g>
<line class="class-line-dashed" marker-end="url(#arr-hollow)" x1="280" x2="280" y1="132" y2="212"/>
</g>
<g>
<rect fill="#fff5f5" height="82" rx="3" stroke="#bb6666" stroke-width="1.5" width="140" x="30" y="212"/>
<rect fill="#edd" height="36" rx="3" stroke="#bb6666" stroke-width="1.5" width="140" x="30" y="212"/>
<text fill="#555" font-size="10" text-anchor="middle" x="100" y="224">
«abstract»
</text>
<text font-weight="italic" text-anchor="middle" x="100" y="238">
Shape
</text>
<line stroke="#bb6666" stroke-width="1" x1="30" x2="170" y1="248" y2="248"/>
<text font-style="normal" text-decoration="none" x="38" y="262">
+area(): double
</text>
<text font-style="italic" text-decoration="none" x="38" y="282">
+draw()
</text>
</g>
<g>
<rect fill="#dae8fc" height="102" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="30" y="30"/>
<rect fill="#c5d8f0" height="36" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="30" y="30"/>
<text font-weight="bold" text-anchor="middle" x="100" y="52">
Circle
</text>
<line stroke="#6c8ebf" stroke-width="1" x1="30" x2="170" y1="66" y2="66"/>
<text font-style="normal" text-decoration="none" x="38" y="80">
-radius: double
</text>
<text font-style="normal" text-decoration="none" x="38" y="100">
+area(): double
</text>
<text font-style="normal" text-decoration="none" x="38" y="120">
+draw()
</text>
</g>
<g>
<rect fill="#dae8fc" height="102" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="210" y="30"/>
<rect fill="#c5d8f0" height="36" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="210" y="30"/>
<text font-weight="bold" text-anchor="middle" x="280" y="52">
Square
</text>
<line stroke="#6c8ebf" stroke-width="1" x1="210" x2="350" y1="66" y2="66"/>
<text font-style="normal" text-decoration="none" x="218" y="80">
-side: double
</text>
<text font-style="normal" text-decoration="none" x="218" y="100">
+area(): double
</text>
<text font-style="normal" text-decoration="none" x="218" y="120">
+draw()
</text>
</g>
<g>
<rect fill="#f5f5ff" height="62" rx="3" stroke="#6666bb" stroke-width="1.5" width="140" x="210" y="212"/>
<rect fill="#dde" height="36" rx="3" stroke="#6666bb" stroke-width="1.5" width="140" x="210" y="212"/>
<text fill="#555" font-size="10" text-anchor="middle" x="280" y="224">
«interface»
</text>
<text font-weight="bold" text-anchor="middle" x="280" y="238">
Printable
</text>
<line stroke="#6666bb" stroke-width="1" x1="210" x2="350" y1="248" y2="248"/>
<text font-style="normal" text-decoration="none" x="218" y="262">
+print()
</text>
</g>
</svg>
