tests/snapshots/class_render__multirank_snapshot.snap
---
source: tests/class_render.rs
expression: svg
---
<svg height="548" viewBox="0 0 408 548" width="408" xmlns="http://www.w3.org/2000/svg">
<defs>
<marker id="arr-filled" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arr-hollow" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#ffffff" points="0 0, 10 5, 0 10" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="arr-diamond-f" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#181818" points="0 5, 5 0, 10 5, 5 10"/>
</marker>
<marker id="arr-diamond-h" markerHeight="12" markerWidth="12" orient="auto" refX="10" refY="5">
<polygon fill="#ffffff" points="0 5, 5 0, 10 5, 5 10" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="arrowhead" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arrowhead-open" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<path d="M0,0 L10,5 L0,10" fill="none" stroke="#181818" stroke-width="1.5"/>
</marker>
</defs>
<style>
text{font-family:"Liberation Sans",Helvetica,Arial,sans-serif;font-size:13px;fill:#181818}.participant-box{fill:#dae8fc;stroke:#6c8ebf;stroke-width:1.5}.lifeline{stroke:#6c8ebf;stroke-width:1;stroke-dasharray:6,4}.activation{fill:#cce0ff;stroke:#6c8ebf;stroke-width:1}.arrow{stroke:#181818;stroke-width:1.5;fill:none}.arrow-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.note-box{fill:#ffffc0;stroke:#bbbb00;stroke-width:1}.divider-line{stroke:#888888;stroke-width:1.5;stroke-dasharray:8,3}.divider-label{font-weight:bold}.title{font-size:15px;font-weight:bold}.class-line{stroke:#181818;stroke-width:1.5;fill:none}.class-line-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.bg{fill:#ffffff}@media (prefers-color-scheme:dark){text{fill:#e8e8e8}.bg{fill:#1e1e1e}.arrow,.class-line{stroke:#e8e8e8}.arrow-dashed,.class-line-dashed{stroke:#e8e8e8}.divider-line{stroke:#aaaaaa}}
</style>
<rect class="bg" fill="#ffffff" height="100%" width="100%"/>
<g>
<path class="class-line" d="M100,152 L100,72" marker-end="url(#arr-hollow)"/>
</g>
<g>
<path class="class-line" d="M100,274 L100,194" marker-end="url(#arr-hollow)"/>
</g>
<g>
<path class="class-line" d="M280,396 L280,356 L100,356 L100,316" marker-end="url(#arr-hollow)"/>
</g>
<g>
<path class="class-line" d="M170,51 L210,51" marker-end="none"/>
<text font-size="11" text-anchor="middle" x="190" y="43">
direct
</text>
</g>
<g>
<path class="class-line" d="M100,72 L100,122.5 L280,122.5 L280,173 L280,295 L280,396" marker-end="none"/>
<text font-size="11" text-anchor="start" x="288" y="148">
skips levels
</text>
</g>
<g>
<rect fill="none" height="42" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="30" y="30"/>
<text font-weight="bold" text-anchor="middle" x="100" y="52">
A
</text>
</g>
<g>
<rect fill="none" height="42" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="30" y="152"/>
<text font-weight="bold" text-anchor="middle" x="100" y="174">
B
</text>
</g>
<g>
<rect fill="none" height="42" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="30" y="274"/>
<text font-weight="bold" text-anchor="middle" x="100" y="296">
C
</text>
</g>
<g>
<rect fill="none" height="42" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="210" y="396"/>
<text font-weight="bold" text-anchor="middle" x="280" y="418">
D
</text>
</g>
<g>
<rect fill="none" height="42" rx="3" stroke="#6c8ebf" stroke-width="1.5" width="140" x="210" y="30"/>
<text font-weight="bold" text-anchor="middle" x="280" y="52">
E
</text>
</g>
</svg>
